--- a/src/TodoListBundle/Resources/public/css/main.css
+++ b/src/TodoListBundle/Resources/public/css/main.css
@@ -1,13 +1,20 @@
 /* Basic Style */
 body {
-    background: #fff;
+    background: #d7d7d7!important;
     color: #333;
     font-family: Lato, sans-serif;
 }
 .container {
     display: block;
+    background: white!important;
     width: 400px;
     margin: 100px auto 0;
+    border-radius: 28px;
+}
+
+.container .sub{
+    float: right;
+    margin-top:-4%;
 }
 ul {
     margin: 0;
